flask is faneto

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,2 +1,9 @@
 <!DOCTYPE html>
-<h1>{{name}}</h1>
+<h1>{{recipe.name}}</h1>
+<h4>{{recipe.time}}</h4>
+<h2>Instructions:</h2>
+<p>{{recipe.instructions}}</p>
+<h2>Ingredients:</h2>
+<p>{{recipe.ingredients}}</p>
+<p><b>Yields: </b>{{recipe.yields}}</p>
+<p>{{recipe.url}}</p>
